syntax = "proto3";

import "common.proto";

option go_package = "./;cluster";

message DataImportRequest {
    OperatorDTO operator = 1;
    string  clusterId = 2;
    string  userName = 3;
    string  password = 4;
    string  filePath = 5;
}

message DataImportResponse {
    ResponseStatusDTO respStatus = 1;
    string recordId = 2;
}

message DataExportRequest {
    OperatorDTO operator = 1;
    string  clusterId = 2;
    string  userName = 3;
    string  password = 4;
    string  fileType = 5;
    string  filter = 6;
}

message DataExportResponse {
    ResponseStatusDTO respStatus = 1;
    string recordId = 2;
}

message DataTransportQueryRequest {
    PageDTO pageReq = 1;
    OperatorDTO operator = 2;
    string  clusterId = 3;
    string  recordId = 4;
}

message DataTransportInfo {
    string RecordId = 1;
    string clusterId = 2;
    string transportType = 3;
    int64 startTime = 4;
    int64 endTime = 5;
    string status = 6;
    string filePath = 7;
}

message DataTransportQueryResponse {
    PageDTO pageReq = 1;
    ResponseStatusDTO respStatus = 2;
    repeated DataTransportInfo transportInfos = 3;
}
