syntax = "proto3";

import "db_cluster.proto";

option go_package = "./;db";

message TransportRecordDTO {
	string ID = 1;
	string ClusterId = 2;
	string TransportType = 3;
	string FilePath = 4;
	string TenantId = 5;
	string Status = 6;
	int64 StartTime = 7;
	int64 EndTime   = 8;
}

message DBCreateTransportRecordRequest {
	TransportRecordDTO record = 1;
}

message DBCreateTransportRecordResponse {
	int32 errCode = 1;
	string errStr = 2;
	string id = 3;
}

message DBUpdateTransportRecordRequest {
	TransportRecordDTO record = 1;
}

message DBUpdateTransportRecordResponse {
	int32 errCode = 1;
	string errStr = 2;
}

message DBFindTransportRecordByIDRequest {
	string recordId = 1;
}

message DBFindTransportRecordByIDResponse {
	int32 errCode = 1;
	string errStr = 2;
	TransportRecordDTO record = 3;
}

message DBListTransportRecordRequest {
    DBPageDTO page = 1;
	string clusterId = 2;
	string recordId = 3;
}

message DBListTransportRecordResponse {
	DBPageDTO page = 1;
	int32 errCode = 2;
	string errStr = 3;
	repeated TransportRecordDTO records = 4;
}